samples/_failures_safe/1761261251_1b771b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1cc889a.c: In function ‘main’:
./samples/SAFE/__tmp_a1cc889a.c:161:12: error: missing terminating " character
  161 |     printf("Graph
      |            ^~~~~~
./samples/SAFE/__tmp_a1cc889a.c:161:5: error: expected expression at end of input
  161 |     printf("Graph
      |     ^~~~~~
./samples/SAFE/__tmp_a1cc889a.c:161:5: error: expected declaration or statement at end of input
